force-app/main/default/staticresources/python/Disappear/src/objects/Author_Identity__c.object
<CustomObject>
    <fields>
        <fullName>Author_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact</description>
        <label>Author Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Author_Identities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identity_Number__c</fullName>
        <description>ID Number which can be a alphanumeric value</description>
        <inlineHelpText>Identifier Value</inlineHelpText>
        <label>Identity Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Identity_Type__c</fullName>
        <description>Type of the identifier allowed for the Author/Contact</description>
        <inlineHelpText>Provide the Identifier Type for the Contact</inlineHelpText>
        <label>Identity Type</label>
        <picklist>
            <picklistValues>
                <fullName>National Provider Identifier (NPI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Identifier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Identifier</label>
    <nameField>
        <displayFormat>CI-{0000000}</displayFormat>
        <label>Contact Identifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>